<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="3dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layoutbackground"
        android:orientation="vertical"
        android:padding="8dp" >
    	
    	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_server"
                android:textSize="16sp"
                android:textColor="#000000" />
            <EditText
		        android:id="@+id/config_server"
		        android:layout_width="match_parent"
		        android:layout_height="33dp"
		        android:singleLine="true"
		        android:textSize="16sp"
		        android:text="@string/config_def_server"
		        android:inputType="text"
		        android:padding="5dp"
		        android:drawableRight="@drawable/edit"
		        android:background="@drawable/publicedittextbackground" />
        </LinearLayout>

    	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_port"
                android:textSize="16sp"
                android:textColor="#000000" />
            <EditText
		        android:id="@+id/config_port"
		        android:layout_width="match_parent"
		        android:layout_height="33dp"
		        android:singleLine="true"
		        android:textSize="16sp"
		        android:text="@string/config_def_port"
		        android:inputType="text"
		        android:padding="5dp"
		        android:drawableRight="@drawable/edit"
		        android:background="@drawable/publicedittextbackground" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>