<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/popupwindowbackground2"
    android:layout_marginBottom="5dp">

	<FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/layoutbackground2"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="0dp" >
	    
	    <TextView 
	        android:id="@+id/iteminfo_itemtitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:paddingLeft="10dp"
	        android:paddingBottom="5dp"
	        android:text=""
	        android:clickable="true"
	        android:onClick="ExitThisWindow"
	        android:textIsSelectable="false"
	        android:textColor="#EEEEEE"/>

	    <TextView
	        android:layout_width="220dp"
	        android:layout_height="30dp"
	        android:layout_gravity="right"
	        android:layout_marginRight="4dp"
	        android:drawableLeft="@drawable/open"
	        android:gravity="left|center_vertical"
	        android:clickable="true"
	        android:onClick="ExitThisWindow"
	        android:paddingLeft="10dp"
	        android:text="@string/string_label_Close"
	        android:textColor="#BBBBBB"
	        android:textSize="20sp" />
	    	    
	</FrameLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <FrameLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="vertical" >
		    <ImageView
		        android:id="@+id/imageView_itempic"
		        android:layout_width="540dp"
		        android:layout_height="360dp"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp"
		        android:layout_marginLeft="15dp"
		        android:layout_marginRight="5dp"
		        android:background="@drawable/layoutbackground3"
		        android:contentDescription="@string/image_desc"
		        android:paddingBottom="7dp"
		        android:paddingLeft="1dp"
		        android:paddingRight="7dp"
		        android:paddingTop="1dp"
	        	android:onClick="ExitThisWindow"
	        	android:clickable="true"
		        android:scaleType="fitXY"/>
		    
		    <ImageView
		        android:id="@+id/imageView_sale"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="16dp"
		        android:layout_marginTop="20dp"
		        android:src="@drawable/sale"
		        android:contentDescription="@string/image_desc" />
		    	
		</FrameLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical" 
	        android:onClick="ExitThisWindow"
	        android:clickable="true"
	        android:paddingTop="2dp"
	        android:paddingBottom="10dp">
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:orientation="vertical"
		        android:layout_weight="1">
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal" 
			        android:paddingBottom="1dp"
			        android:paddingTop="1dp"
		        	android:background="@drawable/layoutbottomborderbackground">
		        	<TextView
		        	    android:id="@+id/textView_itemname" 
			            android:layout_width="wrap_content"
			            android:layout_height="25dp"
			            android:text=""
			            android:textSize="20sp"
			            android:textColor="#EEEEEE"/>
		        </LinearLayout>
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal" 
			        android:paddingBottom="1dp"
			        android:paddingTop="1dp"
		        	android:background="@drawable/layoutbottomborderbackground">
		        	<TextView
		        	    android:id="@+id/textView_itemprice" 
			            android:layout_width="wrap_content"
			            android:layout_height="25dp"
			            android:text=""
			            android:textSize="20sp"
			            android:textColor="#EEEEEE"/>
		        	<TextView
		        	    android:id="@+id/textView_oldprice" 
			            android:layout_width="wrap_content"
			            android:layout_height="25dp"
			            android:text=""
			            android:textSize="20sp"
			            android:layout_marginLeft="50dp"
			            android:textColor="#FF8080"/>
		        </LinearLayout>
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal" 
			        android:paddingBottom="1dp"
			        android:paddingTop="1dp"
		        	android:background="@drawable/layoutbottomborderbackground">
		        	<TextView
		        	    android:id="@+id/textView_itemsalecount" 
			            android:layout_width="wrap_content"
			            android:layout_height="25dp"
			            android:text=""
			            android:textSize="20sp"
			            android:textColor="#EEEEEE"/>
		        </LinearLayout>
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" 
			        android:paddingBottom="1dp"
			        android:layout_marginLeft="30dp"
			        android:paddingTop="8dp">
		        	<TextView
		        	    android:id="@+id/textView_itemdesc"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text=""
			            android:textSize="20sp"
			            android:textColor="#EEEEEE"
			            android:paddingBottom="2dp"
			            android:layout_marginBottom="8dp"
			            
			            android:background="@drawable/layoutbottomborderbackground"/>
		        	<TextView
		        	    android:id="@+id/textView_itemnutr"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text=""
			            android:textSize="20sp"
			            android:textColor="#EEEEEE"
			            android:paddingBottom="2dp"
			            android:layout_marginBottom="8dp"
			            android:background="@drawable/layoutbottomborderbackground"/>
		        	<TextView
		        	    android:id="@+id/textView_itemfeat"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text=""
			            android:textSize="20sp"
			            android:textColor="#EEEEEE"
			            android:paddingBottom="2dp"
			            android:layout_marginBottom="8dp"
			            android:background="@drawable/layoutbottomborderbackground"/>
		        </LinearLayout>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="25dp"
		        android:orientation="vertical">
		      	<TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/info_warning"
			        android:textSize="20sp"
			        android:textColor="#FFFF00"/>
		    </LinearLayout>		    
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>